# TIN

./: CMakeLists.txt  ClassDefinitions.h  Makefile  README.md  makefile  moc_widget.cpp  peer.cpp  tadeusz  tracker  tracker.cpp  tracker_info.txt  ui_widget.h  widget.cpp  widget.h  widget.ui
ClientGUI/: ClientGUI.pro.user.7884379  makefile  widget.cpp  widget.h
